testsuite/tests/builtins/pattern_methods/is_match/non_str_haystack/test.out
Error: Invalid argument type
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(p.is_match(42))
   │       ───────┬──────  
   │              ╰──────── Expecting a "Str" for the parameter "haystack", got a "Int"
───╯
